syntax = "proto3";

package go.micro.srv.GetSession;

service Example {
	rpc GetSession(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
    string SessionId =1;
}

message Response {
	string Error = 1;
    string Errmsg = 2;
    //返回用户名
    string User_name = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
